--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,41 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#5873eb" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Dear.Fa is a social network for intellectuals"
     />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <link
+      type="image/x-icon"
+      rel="shortcut icon"
+      href="Images/favicons/favicon.ico"
+    />
+    <link
+      type="image/png"
+      sizes="16x16"
+      rel="icon"
+      href="Images/favicons/favicon-16x16.png"
+    />
+    <link
+      type="image/png"
+      sizes="32x32"
+      rel="icon"
+      href="Images/favicons/favicon-32x32.png"
+    />
+    <link
+      type="image/png"
+      sizes="96x96"
+      rel="icon"
+      href="Images/favicons/favicon-96x96.png"
+    />
+    <link
+      type="image/png"
+      sizes="120x120"
+      rel="icon"
+      href="Images/favicons/favicon-120x120.png"
+    />
+    <title>Dear.Fa</title>
   </head>
   <body id="root"></body>
 </html>
