--- a/public/index.html
+++ b/public/index.html
@@ -11,31 +11,31 @@
     <link
       type="image/x-icon"
       rel="shortcut icon"
-      href="Images/favicons/favicon.ico"
+      href="/Images/favicons/favicon.ico"
     />
     <link
       type="image/png"
       sizes="16x16"
       rel="icon"
-      href="Images/favicons/favicon-16x16.png"
+      href="/Images/favicons/favicon-16x16.png"
     />
     <link
       type="image/png"
       sizes="32x32"
       rel="icon"
-      href="Images/favicons/favicon-32x32.png"
+      href="/Images/favicons/favicon-32x32.png"
     />
     <link
       type="image/png"
       sizes="96x96"
       rel="icon"
-      href="Images/favicons/favicon-96x96.png"
+      href="/Images/favicons/favicon-96x96.png"
     />
     <link
       type="image/png"
       sizes="120x120"
       rel="icon"
-      href="Images/favicons/favicon-120x120.png"
+      href="/Images/favicons/favicon-120x120.png"
     />
     <title>Dear.Fa</title>
   </head>
