--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,45 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#5873eb" />
-    <meta
-      name="description"
-      content="Dear.Fa is a social network for intellectuals"
-    />
-    <link
-      type="image/x-icon"
-      rel="shortcut icon"
-      href="/Images/favicons/favicon.ico"
-    />
-    <link
-      type="image/png"
-      sizes="16x16"
-      rel="icon"
-      href="/Images/favicons/favicon-16x16.png"
-    />
-    <link
-      type="image/png"
-      sizes="32x32"
-      rel="icon"
-      href="/Images/favicons/favicon-32x32.png"
-    />
-    <link
-      type="image/png"
-      sizes="96x96"
-      rel="icon"
-      href="/Images/favicons/favicon-96x96.png"
-    />
-    <link
-      type="image/png"
-      sizes="120x120"
-      rel="icon"
-      href="/Images/favicons/favicon-120x120.png"
-    />
-    <title>Dear.Fa</title>
-  </head>
-  <body id="root"></body>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="theme-color" content="#5873eb" />
+        <meta
+            name="description"
+            content="Dear.Fa is a social network for intellectuals"
+        />
+        <link
+            type="image/x-icon"
+            rel="shortcut icon"
+            href="/Images/favicons/favicon.ico"
+        />
+        <link
+            type="image/png"
+            sizes="16x16"
+            rel="icon"
+            href="/Images/favicons/favicon-16x16.png"
+        />
+        <link
+            type="image/png"
+            sizes="32x32"
+            rel="icon"
+            href="/Images/favicons/favicon-32x32.png"
+        />
+        <link
+            type="image/png"
+            sizes="96x96"
+            rel="icon"
+            href="/Images/favicons/favicon-96x96.png"
+        />
+        <link
+            type="image/png"
+            sizes="120x120"
+            rel="icon"
+            href="/Images/favicons/favicon-120x120.png"
+        />
+        <title>Dear.Fa</title>
+    </head>
+    <body>
+        <section id="root"></section>
+    </body>
 </html>
