--- a/index.html
+++ b/index.html
@@ -1,46 +1,40 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#5873eb" />
 		<meta
 			name="description"
-			content="Dear.Fa is a social network for intellectuals"
-		/>
+			content="Dear.Fa is a social network for intellectuals" />
 		<link
 			type="image/x-icon"
 			rel="shortcut icon"
-			href="/images/favicons/favicon.ico"
-		/>
+			href="/images/favicons/favicon.ico" />
 		<link
 			type="image/png"
 			sizes="16x16"
 			rel="icon"
-			href="/images/favicons/favicon-16x16.png"
-		/>
+			href="/images/favicons/favicon-16x16.png" />
 		<link
 			type="image/png"
 			sizes="32x32"
 			rel="icon"
-			href="/images/favicons/favicon-32x32.png"
-		/>
+			href="/images/favicons/favicon-32x32.png" />
 		<link
 			type="image/png"
 			sizes="96x96"
 			rel="icon"
-			href="/images/favicons/favicon-96x96.png"
-		/>
+			href="/images/favicons/favicon-96x96.png" />
 		<link
 			type="image/png"
 			sizes="120x120"
 			rel="icon"
-			href="/images/favicons/favicon-120x120.png"
-		/>
+			href="/images/favicons/favicon-120x120.png" />
 		<title>Dear.Fa</title>
 	</head>
-	<body>
-		<div id="root"></div>
+	<body class="page__body">
+		<div class="page__root" id="root"></div>
 		<script type="module" src="/src/index.tsx"></script>
 	</body>
 </html>
